app/deploy/deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hivemind-production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hivemind-deployment
  namespace: hivemind-production
spec:
  replicas: 4
  selector:
    matchLabels:
      app.kubernetes.io/name: hivemind
  template:
    metadata:
      labels:
        app.kubernetes.io/name: hivemind
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: topology.kubernetes.io/zone
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: hivemind
      containers:
        - name: hivemind
          image: 435957166704.dkr.ecr.eu-central-1.amazonaws.com/hivemind:dfcb6a9
          ports:
            - name: http-app
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /
              port: http-app
          resources:
            requests: {cpu: 50m, memory: 64Mi}
            limits: {memory: 128Mi}
---
apiVersion: v1
kind: Service
metadata:
  name: hivemind-service
  namespace: hivemind-production
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: hivemind
  ports:
    - port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hivemind-ingress
  namespace: hivemind-production
  annotations:
    alb.ingress.kubernetes.io/group.name: shared
    alb.ingress.kubernetes.io/load-balancer-name: shared-alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: "443"
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:eu-central-1:435957166704:certificate/842931b2-ccb6-4331-a1c6-d98b44f98028
spec:
  ingressClassName: alb
  rules:
    - host: hivemind.subcloudlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: hivemind-service
                port:
                  number: 80
